Links setup [edit]

--- a/about.html
+++ b/about.html
@@ -25,15 +25,15 @@
                     <div class="three"></div>
                 </div>
                 <div class="logo">
-                    <a href="/index.html">
+                    <a href="index.html">
                         <span>iEmotions</span>
                     </a>
                 </div>
 
                 <ul class="menu pc">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="nav-right">
@@ -63,6 +63,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="teachableMachine.html">Anger Control</a></li>
             </ul>
         </div>
     </header>
