--- a/teachableMachine.html
+++ b/teachableMachine.html
@@ -31,15 +31,15 @@
                     <div class="three"></div>
                 </div>
                 <div class="logo">
-                    <a href="/index.html">
+                    <a href="index.html">
                         <span>iEmotions</span>
                     </a>
                 </div>
 
                 <ul class="menu pc">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="nav-right">
@@ -69,6 +69,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="teachableMachine.html">Anger Control</a></li>
             </ul>
         </div>
     </header>
@@ -94,14 +95,14 @@
         </div>
         <div id="webcam-container">
             <div class="background">
-                <img src="/img/giphy.gif" alt="">
+                <img src="img/giphy.gif" alt="">
             </div>
             <button class="btn" type="button" id="start" onclick="init()">Turn on</button>
         </div>
         <div id="label-container"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;"></div>
         <div id="video" style="display: none;">
-            <video src="/2022-02-15 19-30-53.mp4" onended="pageScroll();" controls></video>
+            <video src="2022-02-15 19-30-53.mp4" onended="pageScroll();" controls></video>
             <span class="cross" onclick="pageScroll();">&times</span>
         </div>
     </main>
