--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                     <div class="three"></div>
                 </div>
                 <div class="logo">
-                    <a href="/index.html">
+                    <a href="index.html">
                         <span>iEmotions</span>
                     </a>
                 </div>
 
                 <ul class="menu pc">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/teachableMachine.html">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="nav-right">
@@ -62,8 +62,10 @@
         <div id="sidebar" style="left: -350px;">
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.php">Contact</a></li>
+                <li><a href="teachableMachine.html">Anger Control</a></li>
+
             </ul>
         </div>
     </header>
