--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     events in their lives..</p>
             </div>
             <div class="content-right">
-                <img src="/img/2.jpg" alt="home.jpg">
+                <img src="img/2.jpg" alt="home.jpg">
             </div>
         </div>
         <div class="article-container">
