--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 </ul>
             </div>
             <div class="nav-right">
-                <form class="form-search form-search-pc pc" action="search.html" method="get">
+                <form class="form-search form-search-pc pc" action="#" method="get">
                     <input name="search-query" class="form-input" type="text" placeholder="Search">
                     <button class="btn" type="submit">Search</button>
                 </form>
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </nav>
-        <form id="form-search-mobile" action="search.html" method="get" style="display: none;">
+        <form id="form-search-mobile" action="#" method="get" style="display: none;">
             <input name="search-query" class="form-search-inp" type="text" placeholder="Search">
             <button class="btn" type="submit">Search</button>
         </form>
@@ -76,7 +76,7 @@
             <div class="max-width mx-1">
                 <h2>Feel Free to Contact Us</h2>
                 <div class="contact-form">
-                    <form method="POST">
+                    <form method="POST" action="#">
                         <div class="form-box">
                             <input type="text" name="name" placeholder="Enter Your Name">
                         </div>
