--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
                 </div>
                 <div class="about">
                     <h2>What is anger?</h2>
-                    <p>Anger is an emotion characterized by antagonism toward someone or something you feel has
-                        deliberately done you wrong.</p>
-                    <p>Anger is an emotion characterized by antagonism toward someone or something you feel has
-                        deliberately done you wrong.</p>
+                    <p>Anger is an emotion characterized by antagonism toward someone or something you feel had deliberately done you wrong.
+                    <p> Anger is a natural response to perceived threats. It causes your body to release adrenaline, your muscles to tighten, and your heart rate and blood pressure to increase. Your senses might feel more acute and your face and hands flushed.</p>
                 </div>
             </div>
             <br>
@@ -152,9 +150,7 @@
         <div class="content">
             <div class="content-left">
                 <h2>Try out our new teachable machine.</h2>
-                <p>This is our all new teachable machine which will help you control your anger digitally with ease.
-                    This will entertain and help you feel beter eventually. It is made by google's all new node baser
-                    teachable Machine concept.
+                <p>Please allow this model to access your camera and it will detect whether you are angry or not and if you are angry, we'll try to make you laugh.
                 </p>
             </div>
             <div class="content-right">
@@ -162,7 +158,7 @@
             </div>
         </div>
         <div class="trynow" style="margin-bottom: 10px;">
-            <button class="btn"><a href="/teachableMachine.html">Try Now!</a></button>
+            <button class="btn"><a href="teachableMachine.html">Try Now!</a></button>
         </div>
     </main>
     <footer>
