--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <img src="img/4.jpg" alt="">
                 </div>
                 <div class="about">
-                    <h2>Causes of why people get angry</h2>
+                    <h2>Why people get angry?</h2>
                     <p>There are many common triggers for anger, such as losing your patience, feeling as if your
                         opinion or efforts aren't appreciated, and injustice.
                         Other causes of anger include memories of traumatic or enraging events and worrying about
@@ -150,7 +150,7 @@
         <div class="content">
             <div class="content-left">
                 <h2>Try out our new teachable machine.</h2>
-                <p>Please allow this model to access your camera and it will detect whether you are angry or not and if you are angry, we'll try to make you laugh.
+                <p>This is our all new teachable machine which will help you control your anger digitally with ease. This will entertain and help you feel beter eventually. Please allow this model to access your camera and it will detect whether you are angry or not and if you are angry, we'll try to make you laugh.
                 </p>
             </div>
             <div class="content-right">
