--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="about">
                     <h2>What is anger?</h2>
-                    <p>Anger is an emotion characterized by antagonism toward someone or something you feel had deliberately done you wrong.
+                    <p> Anger is an intense emotion you feel when something has gone wrong or someone has wronged you. It is typically characterized by feelings of stress, frustration, and irritation. Everyone feels anger from time to time. It’s a perfectly normal response to frustrating or difficult situations. Anger only becomes a problem when it’s excessively displayed and begins to affect your daily functioning and the way you relate with people. Anger can range in intensity, from a slight annoyance to rage. It can sometimes be excessive or irrational. In these cases, it can be hard to keep the emotion in check and could cause you to behave in ways you wouldn’t otherwise behave
                     <p> Anger is a natural response to perceived threats. It causes your body to release adrenaline, your muscles to tighten, and your heart rate and blood pressure to increase. Your senses might feel more acute and your face and hands flushed.</p>
                 </div>
             </div>
@@ -102,11 +102,12 @@
                 </div>
                 <div class="about">
                     <h2>Why people get angry?</h2>
-                    <p>There are many common triggers for anger, such as losing your patience, feeling as if your
-                        opinion or efforts aren't appreciated, and injustice.
-                        Other causes of anger include memories of traumatic or enraging events and worrying about
-                        personal problems.
+                    <p>TFeelings of anger arise due to how we interpret and react to certain situations. Everyone has their own triggers for what makes them angry, but some common ones include situations in which we feel:
                     </p>
+                    <li>threatened or attacked</li>
+                    <li>frustrated or powerless</li>
+                    <li>like we're being invalidated or treated unfairly</li>
+                    <li>like people are not respecting our feelings or possessions</li>
                 </div>
             </div>
             <br>
@@ -116,11 +117,20 @@
                 </div>
                 <div class="about">
                     <h2>Consequences of anger</h2>
-                    <p>The long-term physical effects of uncontrolled anger include increased anxiety, high blood
-                        pressure and headache.
-                        Anger can be a positive and useful emotion, if it is expressed appropriately.
-                        Long-term strategies for anger management include regular exercise, learning relaxation
-                        techniques and counselling. </p>
+                    <h3>Physical effects of anger</h3>
+                    <p>Anger triggers the body’s ‘fight or flight’ response. Other emotions that trigger this response include fear, excitement and anxiety. The adrenal glands flood the body with stress hormones, such as adrenaline and cortisol.The brain shunts blood away from the gut and towards the muscles, in preparation for physical exertion. Heart rate, blood pressure and respiration increase, the body temperature rises and the skin perspires. The mind is sharpened and focused.</p>
+                    <h3>Health problems with anger</h3>
+                    <p>The constant flood of stress chemicals and associated metabolic changes that go with ongoing unmanaged anger can eventually cause harm to many different systems of the body.</p>
+                    <p>Some of the short and long-term health problems that have been linked to unmanaged anger include:</p>
+                    <li>headache</li>
+                    <li>digestion problems, such as abdominal pain</li>
+                    <li>insomnia</li>
+                    <li>increased anxiety</li>
+                    <li>depression</li>
+                    <li>high blood pressure</li>
+                    <li></li>skin problems, such as eczema
+                    <li>heart attack</li>
+                    <li>stroke.</li>
                 </div>
             </div>
             <br>
@@ -130,15 +140,31 @@
                 </div>
                 <div class="about">
                     <h2>How to control anger?</h2>
-                    <p>1. Think before you speak. In the heat of the moment, it's easy to say something you'll later
-                        regret.</p>
-                    <p>2. Once you're calm, express your anger</p>
-                    <p>3. Get some exercise</p>
-                    <p>4. Take a timeout</p>
-                    <p>5. Identify possible solutions</p>
-                    <p>6. Stick with 'I' statements</p>
-                    <p>7. Don't hold a grudge</p>
-                    <p>8. Use humor to release tension</p>
+                    <li>Count down</li>
+                    <li>Take a breathe</li>
+                    <li>Go walk around</li>
+                    <li>Relax your muscles</li>
+                    <li>Repeat a mantra</li>
+                    <li>Stretch</li>
+                    <li>Mentally escape</li>
+                    <li>Play some tunes</li>
+                    <li>Stop talking</li>
+                    <li>Take a timeout</li>
+                    <li>Take action</li>
+                    <li>Write in your journal</li>
+                    <li>Find the most immediate solution</li>
+                    <li>Rehearse your response</li>
+                    <li>Picture a stop sign</li>
+                    <li>Change your routine</li>
+                    <li>Talk to a friend</li>
+                    <li>Laugh</li>
+                    <li>Practice gratitude</li>
+                    <li>Set a timer</li>
+                    <li>Write a letter</li>
+                    <li>Imagine forgiving them</li>
+                    <li>Practice empathy</li>
+                    <li>Express your anger</li>
+                    <li>Find a creative channel</li>
                 </div>
             </div>
             <br>
